--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 }
 
 .layout-background {
-  background-color: #f8f8f8; /* Replace "#f0f0f0" with your desired color */
+  background-color: #ffffff; /* Replace "#f0f0f0" with your desired color */
 }
 
 .footer {
