--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,20 +2,24 @@
   width: 100%;
   overflow: hidden;
   position: relative;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
 .scrollContent {
-  display: flex;
-  animation: scroll 45s linear infinite; /* Increased duration to 60s for slower animation */
+  display: inline-flex;
+  width: 90%;
+  max-width: 99vw;
+  animation: scroll 60s linear infinite;
+  will-change: transform;
 }
 
 @keyframes scroll {
   0% {
-    transform: translateX(0); /* Start from the beginning */
+    transform: translateX(0);
   }
-  100% {
-    transform: translateX(-100%); /* Move to the left by 100% of the content width */
+   100% {
+    transform: translateX(-50%);
   }
 }
 
@@ -29,3 +33,5 @@
 .scrollContainer:hover .scrollContent {
   animation-play-state: paused;
 }
+
+
