Add profile page navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Space Grotesk",;
+  font-family: "Space Grotesk";
+  ::-webkit-scrollbar {display:none;}
+
 }
 
 .logo {
