--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ body {
 }
 
 .layout-background {
-  background-color: #ffffff;
+ 
 }
 
 .footer {
@@ -45,7 +45,6 @@ body {
 }
 
 .paddings {
-  @apply lg:px-20 py-6 px-5;
 }
 
 ::-webkit-scrollbar {
@@ -145,7 +144,7 @@ body {
 
 /* Navbar */
 .navbar {
-  @apply md:pl-10 border-b border-nav-border gap-1;
+  @apply md:pl-10;
 }
 
 /* Profile Menu */
