Add landing page animations

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Space Grotesk";
   ::-webkit-scrollbar {display:none;}
 
 }
@@ -18,7 +17,9 @@
 }
 
 body {
-  font-family: "Space Grotesk";
+  /* font-family: "Space Grotesk"; */
+
+  font-family: "Inter";
 }
 
 .flexCenter {
